--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
+    <link rel="icon" href="images/lsfavicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etch-A-Sketch</title>
 </head>
 <body>
    <h1>Etch-A-Sketch</h1>
+   <button onclick="myFunction()">Add 4 x 4 grid</button>
+   <div id="container"></div>
 </body>
 </html>
