--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etch-A-Sketch</title>
 </head>
-<body>
+<body id='body'>
    <h1>Etch-A-Sketch</h1>
-   <button onclick="myFunction()">Add 4 x 4 grid</button>
+   <button onclick="add16Divs()">Add 16 x 16 grid</button>
+   <button onclick="add64Divs()">Add 64 x 64 grid</button>
+
    <div id="container"></div>
 </body>
 </html>
