math of grid okay

--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etch-A-Sketch</title>
 </head>
-<body id='body'>
+<body>
    <h1>Etch-A-Sketch</h1>
-   <button onclick="add16Divs()">Add 16 x 16 grid</button>
+   <button onclick="refreshPage()">Add 16 x 16 grid</button>
+   <button onclick="add32Divs()">Add 32 x 32 grid</button>
    <button onclick="add64Divs()">Add 64 x 64 grid</button>
 
-   <div id="container"></div>
+   <p id="p1"></p>
+<h2  id="h2"></h2>
+   
+  
 </body>
 </html>
