created a function to change wrong values taken from the users and set them to  1>= value <=64

--- a/index.html
+++ b/index.html
@@ -11,13 +11,11 @@
 </head>
 <body>
    <h1>Etch-A-Sketch</h1>
-   <button onclick="refreshPage()">Add 16 x 16 grid</button>
-   <button onclick="add32Divs()">Add 32 x 32 grid</button>
-   <button onclick="add64Divs()">Add 64 x 64 grid</button>
-
+   <button onclick="refreshPage()">Add grid</button>
+   
    <p id="p1"></p>
 <h2  id="h2"></h2>
    
-  
+
 </body>
 </html>
