editing field and legend

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
    <h1>Etch-A-Sketch</h1>
-   <fieldset>
-    <legend>Add background color at clicking:</legend>
+   <fieldset id="field">
+    <legend id="legend">Add background color by clicking:</legend>
    
 
 <button id="buttonRandom" type="button" onclick="changeRandomColorByClick()">Random</button>
